--- a/indexENG.html
+++ b/indexENG.html
@@ -11,11 +11,9 @@
     <div>
       <canvas width="1000" height="700" id="canvas"></canvas>
     </div>
-    <button id="buttonLanguage">
-      <a href="/indexENG.html">Change language</a>
-    </button>
-    <div id="scoreText">Skóre: 0</div>
-    <div id="lifesText">Životy: 100</div>
+    <button id="buttonLanguage"><a href="/index.html">Změnit Jazyk</a></button>
+    <div id="scoreText">Score: 0</div>
+    <div id="lifesText">HP: 100</div>
   </body>
-  <script src="script.js"></script>
+  <script src="scriptENG.js"></script>
 </html>
